tests/paczka1/small_fuzzy/87514568.err
Error in line 7: gqxKXX S364 -1,4
Error in line 3: gqxKXX S364 62,6
